# watchone

./: .gitignore  CHANGELOG.md  Main.hs  watchOne.cabal
dist-newstyle/cache/: compiler  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
network-3.1.1.1/dist-newstyle/cache/: elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
