cabal-version:      >=1.10
name:               watchOne
version:            0.1.0.0
license-file:       LICENSE
maintainer:         yunfengzhang.zyf@alibaba-inc.com
author:             yunfengzhang.zyf
build-type:         Simple
extra-source-files: CHANGELOG.md

executable watchOne
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        network == 3.1.1.1,
        text, utf8-string,raw-strings-qq,time,text-format-simple,
        bytestring ==0.10.10.0
